--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -5,8 +5,9 @@
   <h3>{{this.title}}</h3>
   <div class="date-location">
     <p>{{this.dateStr}} - {{this.location.country}}{{#if this.location.city}}, {{this.location.city}}{{/if}}{{#if this.location.street}},
-      {{this.location.street}}{{/if}}</p>
+      {{this.location.street}}{{/if}}
+    </p>
+    <p>Language: {{this.language}}</p>
   </div>
-
   <p class="description">{{this.description}}</p>
 </div>
