--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -99,6 +99,8 @@
       padding-top: 2px;
     }
     .date-location {
+      display: flex;
+      justify-content: space-between;
       p {
         color: gray;
       }
