--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,6 +10,8 @@ $screen-large: "(min-width : 1024px)";
 $btn-text-a: #aaaaaa;
 $btn-text-b: #ffffff;
 $btn-wide: 280px;
+$btn-middle-wide: 180px;
+$btn-narrow: 120px;
 $navbar-height: 44px;
 $tile-picture-xl: 180px;
 $tile-picture-l: 120px;
