--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,7 +12,7 @@
     <div id="nav-name-container">
       <p id="nav-user-name">{{this.name}}</p>
     </div>
-    <div class="ui dropdown">
+    <div class="ui dropdown nav">
       <div class="nav-img">
         <img id="nav-avatar" src="{{this.picture}}" alt="profile">
       </div>
