--- a/public/stylesheets/chat.scss
+++ b/public/stylesheets/chat.scss
@@ -1,6 +1,6 @@
 #messages.tandem {
   width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
-  height: calc(100vh - #{$navbar-height} - 180px);
+  height: calc(100vh - #{$navbar-height} - 180px - 50px);
   padding: 0 0 14px 6px;
 }
 
@@ -8,6 +8,35 @@
   height: 440px;
   padding: 0 0 0 6px;
   margin-bottom: 6px;
+}
+
+.tandem-info-wrapper {
+  height: 60px;
+  padding: 2px 8px;
+  background-color: #e9e9e9;
+  border-bottom: 1px solid $background-color-a;
+  display: flex;
+  justify-content: space-between;
+  .tandem-info {
+    display: flex;
+    flex-direction: column;
+    .row {
+      display: flex;
+      justify-content: space-between;
+      margin-right: 40px;
+      width: 430px;
+    }
+  }
+  .options-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .menu {
+      right: 0;
+      left: auto;
+    }
+  }
 }
 
 .chat-wrapper {
