--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -27,7 +27,9 @@
     </div>
   </div>
   <div class="flex-column">
+
     <div class="map-wrapper">
+      <div style="height: 250px; width: 250px" id="map"></div>
     </div>
 
     <div class="info-wrapper">
@@ -48,7 +50,11 @@
     </div>
   </div>
 </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+
 <script src="/javascripts/chatEvent.js"></script>
 <script src="/javascripts/event-details.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzvwE1RxqrkKzPSdt79gYOoMubrlaGZbE"></script>
+<script src="/javascripts/map.js"></script>
