dispaly location on event details

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -58,5 +58,6 @@
 
 <script src="/javascripts/chatEvent.js"></script>
 <script src="/javascripts/event-details.js"></script>
+<script>const event = {{{ eventString }}}</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzvwE1RxqrkKzPSdt79gYOoMubrlaGZbE"></script>
 <script src="/javascripts/map.js"></script>
