css improvements, esepcially tandem chat page. Last active displayed in tandem list

--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -53,7 +53,7 @@
   align-items: center;
   width: 96vw;
   border-radius: 10px;
-  box-shadow: $shadow;
+  box-shadow: $shadow-b;
   @media #{$screen-middle} {
     width: 80vw;
   }
