--- a/public/stylesheets/chat.scss
+++ b/public/stylesheets/chat.scss
@@ -1,5 +1,5 @@
 #messages.tandem {
-  width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
+  width: calc(100vw - 260px - 38px); //full width - tandem list - padding;
   height: calc(100vh - #{$navbar-height} - 180px - 50px);
   padding: 0 0 14px 6px;
 }
@@ -11,10 +11,13 @@
 }
 
 .tandem-info-wrapper {
+  width: calc(100vw - 260px - 38px);
   height: 60px;
   padding: 2px 8px;
-  background-color: #e9e9e9;
-  border-bottom: 1px solid $background-color-a;
+  background-color: $background-color-a;
+  border: 1px solid lightgray;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
   display: flex;
   justify-content: space-between;
   .tandem-info {
@@ -24,7 +27,7 @@
       display: flex;
       justify-content: space-between;
       margin-right: 40px;
-      width: 430px;
+      // width: 380px;
     }
   }
   .options-container {
@@ -43,7 +46,8 @@
   margin: 0 10px;
   #messages {
     overflow-y: auto;
-    background-color: #e9e9e9;
+    // background-color: #e9e9e9;
+    background-color: white;
     .message-container {
       margin: 6px 0;
       .inline-message {
@@ -55,14 +59,15 @@
         background-color: $main-color-b;
       }
       .self {
-        background-color: white;
+        background-color: #e9e9e9;
+        // background-color: white;
       }
     }
   }
 }
 
 #user-input {
-  width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
+  width: calc(100vw - 260px - 38px); //full width - tandem list - padding;
   display: flex;
   flex-direction: row;
   padding-bottom: 4px;
