--- a/public/stylesheets/navigation.scss
+++ b/public/stylesheets/navigation.scss
@@ -6,7 +6,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: $shadow;
+  box-shadow: $shadow-a;
   .nav-group {
     display: flex;
     justify-content: flex-start;
