--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -224,7 +224,7 @@ nav {
   align-items: center;
   width: 96vw;
   border-radius: 10px;
-  box-shadow: 0px 2px 2px grey; }
+  box-shadow: 0px 2px 2px lightgray; }
   @media (min-width: 480px) {
     .tile-interactive {
       width: 80vw; } }
@@ -348,11 +348,10 @@ nav {
     max-height: 100%; }
 
 .tandem-list {
-  width: 200px;
   height: calc(100vh - 44px);
   font-size: 1.2rem; }
   .tandem-list li {
-    width: 100%;
+    width: 260px;
     height: 50px;
     padding: 0 0 0 5px;
     border-right: 1px solid lightgray;
@@ -368,11 +367,19 @@ nav {
       .tandem-list li .tile-image img {
         max-width: 100%;
         max-height: 100%; }
+    .tandem-list li .last-active {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      padding: 0 4px; }
+      .tandem-list li .last-active p {
+        color: gray;
+        font-size: 0.7rem; }
   .tandem-list .current {
     background-color: white; }
 
 #messages.tandem {
-  width: calc(100vw - 200px - 38px);
+  width: calc(100vw - 260px - 38px);
   height: calc(100vh - 44px - 180px - 50px);
   padding: 0 0 14px 6px; }
 
@@ -382,10 +389,13 @@ nav {
   margin-bottom: 6px; }
 
 .tandem-info-wrapper {
+  width: calc(100vw - 260px - 38px);
   height: 60px;
   padding: 2px 8px;
-  background-color: #e9e9e9;
-  border-bottom: 1px solid #f6f6f8;
+  background-color: #f6f6f8;
+  border: 1px solid lightgray;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
   display: flex;
   justify-content: space-between; }
   .tandem-info-wrapper .tandem-info {
@@ -394,8 +404,7 @@ nav {
     .tandem-info-wrapper .tandem-info .row {
       display: flex;
       justify-content: space-between;
-      margin-right: 40px;
-      width: 430px; }
+      margin-right: 40px; }
   .tandem-info-wrapper .options-container {
     display: flex;
     flex-direction: column;
@@ -409,7 +418,7 @@ nav {
   margin: 0 10px; }
   .chat-wrapper #messages {
     overflow-y: auto;
-    background-color: #e9e9e9; }
+    background-color: white; }
     .chat-wrapper #messages .message-container {
       margin: 6px 0; }
       .chat-wrapper #messages .message-container .inline-message {
@@ -419,10 +428,10 @@ nav {
       .chat-wrapper #messages .message-container .other {
         background-color: #20a2ff; }
       .chat-wrapper #messages .message-container .self {
-        background-color: white; }
+        background-color: #e9e9e9; }
 
 #user-input {
-  width: calc(100vw - 200px - 38px);
+  width: calc(100vw - 260px - 38px);
   display: flex;
   flex-direction: row;
   padding-bottom: 4px; }
@@ -506,7 +515,7 @@ form {
   border-radius: 4px;
   font-size: 1.1rem;
   text-align: center;
-  box-shadow: 0px 2px 2px grey; }
+  box-shadow: 0px 2px 2px lightgray; }
 
 .success-btn:hover {
   color: #ffffff;
@@ -520,7 +529,7 @@ form {
   border-radius: 4px;
   font-size: 1.1rem;
   text-align: center;
-  box-shadow: 0px 2px 2px grey; }
+  box-shadow: 0px 2px 2px lightgray; }
 
 .danger-btn:hover {
   color: #ffffff;
