--- a/views/partials/tandem-tile.hbs
+++ b/views/partials/tandem-tile.hbs
@@ -7,8 +7,8 @@
     <p>{{this.location.country}}{{#if this.location.city}}, {{this.location.city}}{{/if}}
   </div>
   <div class="languages">
-    <p>I Learn: {{#each this.knownLanguages}}{{this}}; {{/each}}</p>
-    <p>I Know: {{#each this.learningLanguages}}{{this}}; {{/each}}</p>
+    <p>I Learn: {{#each this.learningLanguages}}{{this}} {{/each}}</p>
+    <p>I Know: {{#each this.knownLanguages }}{{this}} {{/each}}</p>
   </div>
   <a href="/tandems/add/{{ this._id}}" class="white-btn">Add</a>
 </div>
