--- a/public/stylesheets/chat.scss
+++ b/public/stylesheets/chat.scss
@@ -50,6 +50,13 @@
     background-color: white;
     .message-container {
       margin: 6px 0;
+      display: flex;
+      align-items: center;
+      .small {
+        margin-left: 8px;
+        font-size: 0.8rem;
+        color: gray;
+      }
       .inline-message {
         padding: 8px;
         border-radius: 14px;
