--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <script src='/javascripts/landing-page.js'></script>
 <div class="center">
   <div class="content-wrapper">
-    {{!-- <img src="/images/temp-logo.png"> --}}
+    <img src="/images/temp-logo.png">
     <h1>{{title}}</h1>
     <h2>Learn language easy</h2>
     <div class="menu-container">
