--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -4,8 +4,8 @@
       <img id="logo" src="/images/temp-logo.png" alt="logo">
     </div>
     <div class="nav-route-links">
-      <a href="/events/find">Find Events</a>
-      <a href="/tandems/find">Find Tandems</a>
+      <a href="/events/find" data-i18n="nav.findEvents">Find Events</a>
+      <a href="/tandems/find" data-i18n="nav.findTandems">Find Tandems</a>
     </div>
   </div>
   <div class="nav-group right">
@@ -17,8 +17,8 @@
         <img id="nav-avatar" src="{{this.picture}}" alt="profile">
       </div>
       <div class="menu">
-        <div class="item" data-value="profile">My profile</div>
-        <div class="item" data-value="logout">Log out</div>
+        <div class="item" data-value="profile" data-i18n="nav.myProfile">My profile</div>
+        <div class="item" data-value="logout" data-i18n="nav.logOut">Log out</div>
       </div>
     </div>
   </div>
