--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -5,36 +5,36 @@
 <script src='/javascripts/util/language-init.js'></script>
 <script src='/javascripts/util/country-init.js'></script>
 
-<h2>Edit event</h2>
+<h2 data-i18n="event.edit">Edit event</h2>
 <div class="flex-column-center">
     <form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
-        <h3>Basic Info</h3>
+        <h3 data-i18n="event.basicInfo">Basic Information</h3>
         <div class="form-group">
-            <label for="title">Event title</label>
+            <label for="title" data-i18n="event.title">Event title</label>
             <input type="text" id="title" name="title" placeholder="Title" value="{{ event.title}}">
-            <label for="description">Event description</label>
+            <label for="description" data-i18n="event.description">Event description</label>
             <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about..">{{ event.description}}</textarea>
-            <label for="date">Event date</label>
+            <label for="date" data-i18n="event.data">Event date</label>
             <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
-            <label for="language">Event language</label>
+            <label for="language" data-i18n="event.language">Event language</label>
             <select class="ui search selection dropdown" name="language" id="event-language">
             </select>
         </div>
         </br>
-        <h3>Event Picture</h3>
+        <h3 data-i18n="event.picture">Event Picture</h3>
         <div class="form-group">
             <input type="file" name="picture">
         </div>
         </br>
-        <h3>Address</h3>
+        <h3 data-i18n="event.address">Address</h3>
         <div class="form-group">
-            <label for="country">Country</label>
+            <label for="country" data-i18n="event.country">Country</label>
             <select class="ui search selection dropdown" name="country" id="user-country" placeholder="Country">
-                <option value="">Country</option>
+                <option value="" data-i18n="event.country">Country</option>
             </select>
-            <label for="city">City</label>
+            <label for="city" data-i18n="event.city">City</label>
             <input type="text" id="city" name="city" placeholder="City" value="{{ event.location.city}}">
-            <label for=" street ">Street</label>
+            <label for="street" data-i18n="event.street">Street</label>
             <input type="text" id="street" name="street" placeholder="Street" value="{{ event.location.street}}">
         </div>
         </br>
