--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -7,7 +7,7 @@
     <p>{{this.dateStr}} - {{this.location.country}}{{#if this.location.city}}, {{this.location.city}}{{/if}}{{#if this.location.street}},
       {{this.location.street}}{{/if}}
     </p>
-    <p>Language: {{this.language}}</p>
+    <p data-i18n="event.language">Language: {{this.language}}</p>
   </div>
   <p class="description">{{this.description}}</p>
 </div>
