--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -8,32 +8,32 @@
 
 
 <script>let eventId = null</script>
-<h2>Find Events</h2>
+<h2 data-i18n="event.findHeader">Find Events</h2>
 
 <div class="search-container">
     <div class="filter-container">
         <form action="/events/find" method="POST" id="form-container">
             <div class="form-group">
-                <label for="language">Language</label>
+                <label for="language" data-i18n="event.language">Language</label>
                 <select name="language" class="search selection" multiple="" id="multi-select-learning">
-                    <option value="">Select a language</option>
+                    <option value="" data-i18n="event.selectLanguage">Select a language</option>
                 </select>
-                <label for="country">Country</label>
+                <label for="country" data-i18n="event.country">Country</label>
                 <select class="ui search selection dropdown" name="country" id="user-country">
-                    <option value="">Country</option>
+                    <option value="" data-i18n="event.country">Country</option>
                 </select>
-                <label for="city">City:</label>
+                <label for="city" data-i18n="event.city">City:</label>
                 <input type="text" name="city" placeholder="City" value="">
-                <label for="minDate">From:</label>
+                <label for="minDate" data-i18n="event.from">From:</label>
                 <input type="date" name="minDate">
-                <label for="maxDate">To:</label>
+                <label for="maxDate" data-i18n="event.to">To:</label>
                 <input type="date" name="maxDate">
             </div>
             </br>
             <input type="submit" value="Find Events" class="success-btn">
         </form>
         </br>
-        <a href="/events/new" class="white-btn">Create own event</a>
+        <a href="/events/new" class="white-btn" data-i18n="event.createEvent">Create new event</a>
     </div>
 
     <div class="results-container">
